adding a tictactoe component from official docs

--- a/src/App.css
+++ b/src/App.css
@@ -23,11 +23,23 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+html {
+  background-color: #282c34;
+  color: white;
+}
 .App-link {
   color: #61dafb;
 }
-
+.boardGame {
+  background-color: #282c34 imp !important;
+  color: white;
+}
+.appStyle {
+  padding: 33px;
+  background-color: #282c34;
+  color: white;
+  height: 100%;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -43,4 +55,55 @@
   width: 62px;
   height: 31px;
   border-radius: 4px;
+}
+body {
+  font: 14px "Century Gothic", Futura, sans-serif;
+  margin: 20px;
+}
+
+ol,
+ul {
+  padding-left: 30px;
+}
+
+.board-row:after {
+  clear: both;
+  content: "";
+  display: table;
+}
+
+.status {
+  margin-bottom: 10px;
+}
+
+.square {
+  background: #fff;
+  border: 1px solid #999;
+  float: left;
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  height: 34px;
+  margin-right: -1px;
+  margin-top: -1px;
+  padding: 0;
+  text-align: center;
+  width: 34px;
+}
+
+.square:focus {
+  outline: none;
+}
+
+.kbd-navigation .square:focus {
+  background: #ddd;
+}
+
+.game {
+  display: flex;
+  flex-direction: row;
+}
+
+.game-info {
+  margin-left: 20px;
 }
